# SpaceTry

./: .AGENTS.md.template  .dockerignore  .gitignore  AGENTS.md  BT_RUNNER_SETUP.md  CITATION.cff  README.md  REF_SCENARIO.md  Scenario-based_Test.md
docker/: Dockerfile  (+7 more)
logs/icra_isrs_26/trace/spacetry_scenario_navigation_obstacle_sensing_coupled/: package.xml  setup.cfg  setup.py
logs/isrs26/scenario_1/spacetry_scenario_obstacle_sensing_stress/: package.xml  setup.py
logs/isrs26/scenario_3/spacetry_scenario_navigation_obstacle_degraded_perception/: package.xml  setup.cfg  setup.py
logs/run1/spacetry_scenario_driver/: package.xml  setup.cfg  setup.py
logs/run1/spacetry_scenario_driver/config/: autonomy_scenario.yaml
logs/run1/spacetry_scenario_driver/launch/: autonomy_scenario.launch.py
logs/run1/spacetry_scenario_driver/reports/: autonomy_scenario_report_2026-03-30.md
logs/run1/spacetry_scenario_driver/spacetry_scenario_driver/: scenario_driver_node.py
logs/run2/spacetry_scenario_uncertainty_stress/: README.md  package.xml  setup.cfg  setup.py
logs/run2/spacetry_scenario_uncertainty_stress/config/: scenario_contract.yaml  scenario_uncertainty_stress.yaml
logs/run2/spacetry_scenario_uncertainty_stress/launch/: scenario_uncertainty_stress.launch.py
logs/run2/spacetry_scenario_uncertainty_stress/spacetry_scenario_uncertainty_stress/: scenario_driver_node.py
logs/skill_example/spacetry_scenario_perception_lidar_degradation_gradual/: package.xml  setup.cfg  setup.py
logs/skill_example/spacetry_scenario_perception_lidar_degradation_gradual/config/: scenario_config.yaml  scenario_contract.yaml
logs/skill_example/spacetry_scenario_perception_lidar_degradation_gradual/launch/: scenario_perception_lidar_degradation_gradual.launch.py
logs/skill_example/spacetry_scenario_perception_lidar_degradation_gradual/spacetry_scenario_perception_lidar_degradation_gradual/: __init__.py  driver.py
src/marti_bringup/: CMakeLists.txt  package.xml
src/marti_bringup/launch/: marti_curiosity_outpost.launch.py
src/marti_mission/: CMakeLists.txt  package.xml  setup.cfg
src/marti_mission/config/: mission_01.yaml  objects.yaml  waypoints.yaml
src/marti_mission/marti_mission/: marti_mission_server.py
src/marti_models/: package.xml
src/marti_models/models/: README.md
src/marti_models/models/ISS/: model.sdf
src/marti_models/models/block_island/: model.config
src/marti_models/models/comms_tower/: model.config  model.sdf
src/marti_models/models/dock_pad_marker/: model.config  model.sdf
src/marti_models/models/habitat_module/: model.config  model.sdf
src/marti_models/models/hazard_sandtrap/: model.config  model.sdf
src/marti_models/models/rock_01/: model.config  model.sdf
src/marti_models/models/sample_cache/: model.config  model.sdf
src/marti_models/models/science_rock/: model.config  model.sdf
src/marti_models/models/solar_panel/: model.sdf
src/marti_models/models/station/: model.sdf
src/marti_models/models/tower/: model.sdf
src/spacetry_bringup/: AGENTS.md  CMakeLists.txt  package.xml
src/spacetry_bringup/launch/: spacetry_curiosity_outpost.launch.py
src/spacetry_bt/: CMakeLists.txt  bt_params.yaml  bt_params_example.yaml  package.xml
src/spacetry_bt/include/spacetry_bt/: nodes_ros.hpp
src/spacetry_bt/py_nodes/: __init__.py  base_bt_nodes.py  base_bt_runner.py
src/spacetry_bt/src/: bt_runner.cpp  nodes_ros.cpp
src/spacetry_bt/trees/: base_bt.xml  cautious_profile_bt.xml  escape_profile_bt.xml  silly_explorer.xml
src/spacetry_mission/: CMakeLists.txt  MISSION.md  package.xml  setup.cfg  setup.py
src/spacetry_mission/config/: README.md  mission_01.yaml  objects.yaml  waypoints.yaml
src/spacetry_mission/spacetry_mission/: spacetry_mission_server.py
src/spacetry_models/: CMakeLists.txt  README.md  package.xml
src/spacetry_models/models/: README.md
src/spacetry_models/models/block_island/: model.config  model.sdf
src/spacetry_models/models/large_rocks/: model.config  model.sdf
src/spacetry_models/models/rock_5/: model.config  model.sdf
src/spacetry_models/models/solar_panel/: model.sdf
src/spacetry_models/models/station/: model.config  model.sdf
src/spacetry_monitors/: CMakeLists.txt  README.md  package.xml
src/spacetry_monitors/config/: signal_inventory.yaml
src/spacetry_monitors/docs/: architecture.md
src/spacetry_monitors/examples/scenario_rock_survey/: requirements.yaml  roverSpec_full.fcs  scenario.md  signals_full.yaml  spec.fcs
src/spacetry_monitors/examples/scenario_safe_return/: requirements.yaml  roverSpec_full.fcs  signals.yaml  signals_full.yaml
src/spacetry_monitors/fretish_agent/: cli.py  fretish_writer.py  linter.py  realizability_runner.py  revision_advisor.py  ritmos_exporter.py  variable_mapper.py
src/spacetry_monitors/hs/: CuriosityMonitor.hs  Main.hs  ritmos-monitor.cabal
src/spacetry_monitors/include/: copilot.h  copilot_types.h
src/spacetry_monitors/src/: copilot.c  copilot_monitor.cpp
src/spacetry_monitors/tests/: test_ritmos_exporter.py
src/spacetry_perception/: package.xml  setup.cfg  setup.py
src/spacetry_perception/spacetry_perception/: obstacle_direction_node.py  odom_relay_node.py
src/spacetry_requirements/: CMakeLists.txt  package.xml  setup.py
src/spacetry_requirements/config/: agent_prompt.md  fretish_templates.yaml  mission_description_template.md  signal_inventory.yaml
src/spacetry_requirements/docs/: architecture.md
src/spacetry_requirements/fretish_agent/: __init__.py  cli.py  fretish_writer.py  realizability_runner.py  signal_checker.py  signal_registry.py
src/spacetry_requirements/tests/: test_fretish_writer.py  test_linter.py  test_signal_registry.py
src/spacetry_scenario_metrics/: package.xml  setup.py
src/spacetry_scenario_metrics/spacetry_scenario_metrics/: __init__.py  io.py  report.py  schema.py  session.py
src/spacetry_scenario_metrics/test/: test_session.py
src/spacetry_world/: AGENTS.md  CMakeLists.txt  README.md  package.xml
src/spacetry_world/launch/: mars_outpost.launch.py
src/spacetry_world/worlds/: README.md  mars_outpost.sdf
(+229 files in other folders)
