<?xml version="1.0"?>
<package format="3">
  <name>marti_bringup</name>
  <version>0.0.0</version>
  <description>MARTI bringup and integration launch files.</description>

  <maintainer email="todo@example.com">MARTI</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>marti_world</exec_depend>
  <exec_depend>marti_models</exec_depend>

  <!-- Provided by Space ROS / ros_gz -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
</package>
