<?xml version="1.0"?>
<package format="3">
  <name>marti_models</name>
  <version>0.0.0</version>
  <description>MARTI Gazebo models</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
