<?xml version="1.0"?>
<package format="3">
  <name>spacetry_bringup</name>
  <version>0.0.0</version>
  <description>SpaceTry 🥐 bringup and integration launch files.</description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry 🥐</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>

  <exec_depend>spacetry_world</exec_depend>
  <exec_depend>spacetry_models</exec_depend>

  <!-- Provided by Space ROS / ros_gz -->
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
</package>
