<?xml version="1.0"?>
<package format="3">
  <name>spacetry_bt</name>
  <version>0.0.1</version>
  <description>SpaceTry 🥐 BehaviorTree.CPP-based mission runner for the Curiosity demo.</description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry 🥐</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>behaviortree_cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
