<?xml version="1.0"?>
<package format="3">
  <name>spacetry_mission</name>
  <version>0.0.0</version>
  <description>SpaceTry 🥐 mission configuration and tooling</description>

  <maintainer email="TODO@TODO.com">TODO</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
