<?xml version="1.0"?>
<package format="3">
  <name>spacetry_models</name>
  <version>0.0.0</version>
  <description>SpaceTry 🥐 Gazebo models</description>

  <maintainer email="keila.lima@gssi.it">SpaceTry 🥐</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
