<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>spacetry_monitors</name>
  <version>0.1.0</version>
  <description>
    FRETish writing and verification agent for SpaceTry.
    Transforms natural-language mission descriptions into minimal safety
    requirements in FRETish form, performs realizability checking, and
    exports RiTMOS monitor-synthesis artifacts.
  </description>
  <maintainer email="spacetry@example.com">SpaceTry Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
