<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_metrics</name>
  <version>0.0.0</version>
  <description>Shared event-centric metrics and report helpers for SpaceTry scenario drivers.</description>

  <maintainer email="keila.lima@gssi.it">SpaceTry Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
