<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_driver</name>
  <version>0.0.0</version>
  <description>Scenario driver for injecting uncertainty and measuring rover autonomy adaptation.</description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
