<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_uncertainty_stress</name>
  <version>0.0.0</version>
  <description>Scenario driver for uncertainty-driven autonomy evaluation of the SpaceTry rover.</description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>geometry_msgs</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>nav_msgs</depend>
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <exec_depend>python3-yaml</exec_depend>

  <exec_depend>spacetry_bringup</exec_depend>
  <exec_depend>spacetry_mission</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
