<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_perception_lidar_degradation_gradual</name>
  <version>0.0.0</version>
  <description>Autonomy scenario driver for runtime LiDAR-derived obstacle classification degradation.</description>

  <maintainer email="keila.lima@gssi.it">SpaceTry Team</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>spacetry_scenario_metrics</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
