<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_obstacle_sensing_stress</name>
  <version>0.0.0</version>
  <description>Scenario driver for runtime obstacle blocking with degraded obstacle interpretation.</description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
