<?xml version="1.0"?>
<package format="3">
  <name>spacetry_scenario_navigation_obstacle_degraded_perception</name>
  <version>0.0.0</version>
  <description>
    Autonomy evaluation scenario for runtime obstacle blocking with degraded obstacle interpretation.
  </description>

  <maintainer email="ricardo.caldas@gssi.it">SpaceTry</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ament_index_python</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros2bag</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>spacetry_bringup</exec_depend>
  <exec_depend>spacetry_models</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
